feat(runtime): add managed server and client lifecycle ownership
- introduce a runtime-owned lifecycle with a single completion and close boundary
- make concurrent and repeated shutdown requests idempotent
- launch controller and agent modes directly without invoking their main methods
- expose file-backed launch APIs for the controller and agent
- validate configuration before opening threads, sockets, storage, or telemetry
- clean up all acquired resources when server or client startup fails
- include controller service, Java runtime, and telemetry providers in shutdown
- share lifecycle ownership between runtime entry points and shutdown hooks
- remove the obsolete asynchronous process-exit startup path
- add focused tests for lifecycle completion, concurrent close, validation order,
  and partial-startup cleanup
- update the unified runtime task list and advance active work to Step 3

Verified with 671 passing reactor tests and no Mockito references.